<resources>
    <string name="issue_report_title">Having Trouble?</string>
    <string name="issue_report_body">Encountered a bug or have feedback?</string>
    <string name="issue_report_body_2">Report it as soon as possible!</string>
    <string name="issue_report_github">Report on GitHub</string>
    <string name="issue_report_telegram">Contact via Telegram</string>
    <string name="issue_report_github_link" translatable="false">https://github.com/diphons/DKM-SU/issues</string>
    <string name="issue_report_telegram_link" translatable="false">https://t.me/d8gdiskusi</string>
    <string name="confirm">Confirm</string>
    <string name="app_name" translatable="false">DKM SU</string>
    <string name="app_name_long" translatable="false">DKM - SU</string>
    <string name="home">Home</string>
    <string name="home_not_installed">Not installed</string>
    <string name="home_click_to_install">Click to install</string>
    <string name="home_working">Working</string>
    <string name="home_working_version">Version</string>
    <string name="home_superuser_count">Superusers</string>
    <string name="home_module_count">Modules</string>
    <string name="home_failure">DKMSU v2 signature not found in kernel! [ !KSU_DKMSU || != size/hash ]</string>
    <string name="home_failure_tip">Ask your kernel developer to integrate DKMSU!</string>
    <string name="home_device">Device</string>
    <string name="home_kernel">Kernel</string>
    <string name="home_kernel_tittle">Kernel Manager</string>
    <string name="home_susfs">SuSFS</string>
    <string name="home_susfs_sus_su" translatable="false">SuS SU</string>
    <string name="home_android">Android</string>
    <string name="home_manager_version">Manager</string>
    <string name="home_selinux_status">SELinux</string>
    <string name="selinux_status_disabled">Disabled</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="selinux_status_permissive">Permissive</string>
    <string name="selinux_status_unknown">Unknown</string>
    <string name="superuser">Superuser</string>
    <string name="module_failed_to_enable">Failed to enable module: %s</string>
    <string name="module_failed_to_disable">Failed to disable module: %s</string>
    <string name="module_empty">No module installed</string>
    <string name="module">Module</string>
    <string name="module_install_prompt_with_name">The following module(s) will be installed: %1$s</string>
    <string name="module_sort_a_to_z">Sort (A - Z)</string>
    <string name="module_sort_z_to_a">Sort (Z - A)</string>
    <string name="uninstall">Uninstall</string>
    <string name="restore">Restore</string>
    <string name="module_install">Install</string>
    <string name="install">Install</string>
    <string name="reboot">Reboot</string>
    <string name="settings">Settings</string>
    <string name="power_menu">Power Menu</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot_userspace">Soft Reboot</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_bootloader">Bootloader</string>
    <string name="reboot_download">Download</string>
    <string name="reboot_edl">EDL</string>
    <string name="about">About</string>
    <string name="module_uninstall_confirm">Are you sure you want to uninstall module %s?</string>
    <string name="module_uninstall_success">%s uninstalled</string>
    <string name="module_uninstall_failed">Failed to uninstall: %s</string>
    <string name="module_restore_confirm">Are you sure you want to restore module %s?</string>
    <string name="module_restore_success">%s restoreed</string>
    <string name="module_restore_failed">Failed to restore: %s</string>
    <string name="module_version">Version</string>
    <string name="module_author">Author</string>
    <string name="module_overlay_fs_not_available">Modules are unavailable as OverlayFS is disabled by the kernel.</string>
    <string name="home_module_mount">System Mount</string>
    <string name="home_magic_mount">Magic Mount</string>
    <string name="home_overlayfs_mount">OverlayFS</string>
    <string name="use_overlay_fs">Use OverlayFS</string>
    <string name="use_overlay_fs_summary">Toggle between using OverlayFS or Magic for DKM SU mount system</string>
    <string name="reboot_required">Reboot Required</string>
    <string name="reboot_message">Changes will take effect after rebooting the system. Would you like to reboot now?</string>
    <string name="module_restore">Restore module</string>
    <string name="module_restore_message">Restore modules from recent backup.</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="module_backup">Backup module</string>
    <string name="module_backup_message">Backup currently installed modules.</string>
    <string name="allowlist_restore">Restore allowlist</string>
    <string name="allowlist_restore_message">Restore allowlist from recent backup.</string>
    <string name="allowlist_backup">Backup allowlist</string>
    <string name="allowlist_backup_message">Backup currently configured allowlist.</string>
    <string name="warning">Warning</string>
    <string name="warning_message">This feature is still in beta and under development. Please ensure you backup your modules before proceeding. Use this feature only if you understand the potential risks. Proceed with caution.</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="show">Show</string>
    <string name="refresh">Refresh</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="hide_system_apps">Hide system apps</string>
    <string name="send_log">Send logs</string>
    <string name="safe_mode">Safe mode</string>
    <string name="reboot_to_apply">Reboot to take effect</string>
    <string name="module_magisk_conflict">Modules are unavailable due to a conflict with Magisk!</string>
    <string name="home_next_kernelsu">🔥 DKM Build</string>
    <string name="home_next_kernelsu_repo">https://github.com/diphons/DKM-SU</string>
    <string name="home_next_kernelsu_body">DKM experimental branch. Check it out on GitHub!</string>
    <string name="home_experimental_kernelsu">⚠️ Experimental Development Warning!</string>
    <string name="home_experimental_kernelsu_repo">127.0.0.1</string>
    <string name="home_experimental_kernelsu_body">Next is a non-official build which is always under active experimental development. It is provided as-is, with no guarantees of stability, performance, or reliability.</string>
    <string name="home_experimental_kernelsu_body_point_1"> • Use at Your Own Risk: It may experience crashes, unexpected behavior, or cause system issues.</string>
    <string name="home_experimental_kernelsu_body_point_2"> • No Warranty: The developers are not responsible for any data loss, system damage, or other consequences arising from its use.</string>
    <string name="home_experimental_kernelsu_body_point_3"> • For Testing Purposes Only: It is intended for users who understand the risks and are comfortable troubleshooting issues.</string>
    <string name="about_source_code"><![CDATA[View source code at %1$s]]></string>
    <string name="profile">App Profile</string>
    <string name="profile_default">Default</string>
    <string name="profile_template">Template</string>
    <string name="profile_custom">Custom</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_namespace">Mount namespace</string>
    <string name="profile_namespace_inherited">Inherited</string>
    <string name="profile_namespace_global">Global</string>
    <string name="profile_namespace_individual">Individual</string>
    <string name="profile_groups">Groups</string>
    <string name="profile_capabilities">Capabilities</string>
    <string name="profile_selinux_context">SELinux context</string>
    <string name="profile_umount_modules">Umount modules</string>
    <string name="failed_to_update_app_profile">Failed to update App Profile for %s</string>
    <string name="require_kernel_version">The current DKM-SU version %1$d is too low for the manager to work properly. Please upgrade to version %2$d or higher!</string>
    <string name="settings_umount_modules_default">Umount modules by default</string>
    <string name="settings_umount_modules_default_summary">The global default value for \"Umount modules\" in App Profile. If enabled, it will remove all module modifications to the system for apps that don\'t have a profile set.</string>
    <string name="settings_susfs_toggle">Hide suspecious su hooks</string>
    <string name="settings_susfs_toggle_summary">It disables kprobe hooks made by ksu, and instead the non-kprobe inline hooks will be enabled, just the same implementation for non-gki kernel without kprobe supported.</string>
    <string name="profile_umount_modules_summary">Enabling this option will allow DKM-SU to restore any modified files by the modules for this app.</string>
    <string name="profile_selinux_domain">Domain</string>
    <string name="profile_selinux_rules">Rules</string>
    <string name="module_update">Update</string>
    <string name="module_downloading">Downloading module: %s</string>
    <string name="module_start_downloading">Start downloading: %s</string>
    <string name="new_version_available">New version %s is available, click to upgrade.</string>
    <string name="launch_app">Launch</string>
    <string name="close">Close</string>
    <string name="force_stop_app">Force stop</string>
    <string name="restart_app">Restart</string>
    <string name="failed_to_update_sepolicy">Failed to update SELinux rules for: %s</string>
    <string name="su_not_allowed">Granting superuser to %s is not allowed</string>
    <string name="module_changelog">Changelog</string>
    <string name="settings_profile_template">App Profile Template</string>
    <string name="settings_profile_template_summary">Manage local and online template of App Profile</string>
    <string name="app_profile_template_create">Create template</string>
    <string name="app_profile_template_edit">Edit template</string>
    <string name="app_profile_template_id">ID</string>
    <string name="app_profile_template_id_invalid">Invalid template id</string>
    <string name="app_profile_template_name">Name</string>
    <string name="app_profile_template_description">Description</string>
    <string name="app_profile_template_save">Save</string>
    <string name="app_profile_template_delete">Delete</string>
    <string name="app_profile_template_view">View template</string>
    <string name="app_profile_template_readonly">Read only</string>
    <string name="app_profile_template_id_exist">Template ID already exists!</string>
    <string name="app_profile_import_export">Import/Export</string>
    <string name="app_profile_import_from_clipboard">Import from clipboard</string>
    <string name="app_profile_export_to_clipboard">Export to clipboard</string>
    <string name="app_profile_template_export_empty">Cannot find local template to export!</string>
    <string name="app_profile_template_import_success">Imported successfully</string>
    <string name="app_profile_template_sync">Sync online templates</string>
    <string name="app_profile_template_save_failed">Failed to save template</string>
    <string name="app_profile_template_import_empty">Clipboard is empty!</string>
    <string name="module_changelog_failed">Fetch changelog failed: %s</string>
    <string name="settings_check_update">Check update</string>
    <string name="settings_check_update_summary">Automatically check for updates when opening the app</string>
    <string name="grant_root_failed">Failed to grant root!</string>
    <string name="action">Action</string>
    <string name="open">Open</string>
</resources>