<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    android:gravity="center"
    android:orientation="vertical"
    android:alpha="0.95"
    tools:ignore="ContentDescription,UselessParent">

    <LinearLayout
        android:id="@+id/popup_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="25dp"
        android:background="@drawable/global_actions_lite_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_power_off"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="14dp"
                    android:src="@drawable/ic_power_off"
                    android:scaleType="centerInside"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shutdown"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <View
                android:layout_width="25dp"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_system"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="14dp"
                    android:src="@drawable/ic_restart"
                    android:scaleType="centerInside"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restart_app"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <View
                android:layout_width="25dp"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_recovery"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="14dp"
                    android:src="@drawable/ic_restart_recovery"
                    android:scaleType="centerInside"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_recovery"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_bootloader"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="14dp"
                    android:src="@drawable/ic_restart_bootloader"
                    android:scaleType="centerInside"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_bootloader"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <View
                android:layout_width="25dp"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_download"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="14dp"
                    android:src="@drawable/ic_restart_download"
                    android:scaleType="centerInside"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_download"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <View
                android:layout_width="25dp"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_edl"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="18dp"
                    android:src="@drawable/ic_emergency"
                    android:scaleType="centerInside"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_edl"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_reboot_userspace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reboot_userspace"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="14dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_restart_ui"
                    android:scaleType="fitCenter"
                    android:background="@drawable/global_actions_lite_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_userspace"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>